--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Building Zcash
+Building Encrypted.Cash
 
 See doc/build-*.md for instructions on building zcashd,
 the intended-for-services, no-graphical-interface, reference
