--- a/INSTALL
+++ b/INSTALL
@@ -2,4 +2,4 @@ Building Encrypted.Cash
 
 See doc/build-*.md for instructions on building zcashd,
 the intended-for-services, no-graphical-interface, reference
-implementation of Zcash.
+implementation of Encrypted.cash
